准备开发导入Excel, 选择单元格显示二维码信息

--- a/QRCodeCreator/QRCodeCreator.csproj
+++ b/QRCodeCreator/QRCodeCreator.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>QRCodeCreator</RootNamespace>
     <AssemblyName>QRCodeCreator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -64,6 +65,7 @@
       <HintPath>..\packages\Microsoft.Bcl.1.1.8\lib\net40\System.Threading.Tasks.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -84,12 +86,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ImportExcel.xaml.cs">
+      <DependentUpon>ImportExcel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="QRCodeModel.cs" />
     <Page Include="FrmAdvanceFunc.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="FrmViewImage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ImportExcel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -138,10 +147,9 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\HoweUtil\Util\Util.csproj">
-      <Project>{3363DA83-F692-4367-B905-062451ACA009}</Project>
+      <Project>{3363da83-f692-4367-b905-062451aca009}</Project>
       <Name>Util</Name>
     </ProjectReference>
   </ItemGroup>
