--- a/QRCodeCreator/packages.config
+++ b/QRCodeCreator/packages.config
@@ -3,4 +3,7 @@
   <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40-Client" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40-Client" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40-Client" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
+  <package id="Util.HowesDOMO" version="1.0.3" targetFramework="net40" />
+  <package id="ZXing.Net" version="0.16.4" targetFramework="net40" />
 </packages>
