--- a/QRCodeCreator/packages.config
+++ b/QRCodeCreator/packages.config
@@ -1,10 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net40-Client" />
-  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40-Client" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40-Client" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
-  <package id="Util.HowesDOMO" version="1.0.11" targetFramework="net40" />
-  <package id="WPFControls" version="1.0.4" targetFramework="net40" />
-  <package id="ZXing.Net" version="0.16.4" targetFramework="net40" />
+  <package id="Util.HowesDOMO" version="1.0.18-alpha8" targetFramework="net40" />
+  <package id="WPFControls" version="1.0.7" targetFramework="net40" />
+  <package id="ZXing.Net" version="0.16.6" targetFramework="net40" />
 </packages>
